Insert Inventory query integration

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express",
     "postgres"
   ],
-  "author": "Hugo Di Francesco",
+  "author": "Peter Santoso",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^4.0.1",
@@ -37,13 +37,5 @@
   "xo": {
     "prettier": true,
     "space": true
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HugoDF/express-postgres-starter.git"
-  },
-  "bugs": {
-    "url": "https://github.com/HugoDF/express-postgres-starter/issues"
-  },
-  "homepage": "https://github.com/HugoDF/express-postgres-starter#readme"
+  }
 }
