--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
   "author": "Peter Santoso",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcrypt": "5.0.0",
     "client-sessions": "^0.8.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^3.22.0",
-    "migrate": "^1.6.2",
-    "morgan": "^1.9.1",
-    "pg": "^8.0.0",
+    "helmet": "^3.23.3",
+    "migrate": "^1.7.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1",
     "sql-template-strings": "^2.2.2",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.6",
     "xo": "^0.28.3"
   },
   "xo": {
