--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,4 +12,4 @@ tasks:
         psql postgres -c "CREATE USER postgres SUPERUSER;" -c "CREATE DATABASE db WITH OWNER postgres;"
         npm install
         npm run migrate up
-        npm start
+        npm run dev
